--- a/client/public/index.html
+++ b/client/public/index.html
@@ -22,9 +22,9 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.0/font/bootstrap-icons.css">
     <!--css-->
     <link rel="stylesheet" href="../src/asset/css/style.css">
-     <!--------------------- ICONS --------------------->
-     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css" />
-     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <!--------------------- ICONS --------------------->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -53,31 +53,34 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <!--bootstrap js-->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+    <!--main js-->
+    <!-- <script type="text/javascript" src="../src/main.js"></script> -->
     <script>
-      $(window).resize(function() {
-        nsZoomZoom();
-      });
-      function nsZoomZoom() {
-          let htmlWidth = $(window).innerWidth();
-          let bodyWidth = 1280;
-          let scale;
-          if (htmlWidth < bodyWidth)
-              scale = 1
-          else {
-              scale = htmlWidth / bodyWidth;
-          }
-          if(htmlWidth>1024){
-              $(".wrapper").css('-ms-transform', 'scale(' + scale + ')');
-              $(".wrapper").css('transform', 'scale(' + scale + ')')
-              $(".wrapper").css('transform-origin', 'center top');
-          }
-          else{
-              $(".wrapper").css('transform', 'none');
-          }
-      }
-      setTimeout(() => {
-        nsZoomZoom();
-      }, 100);
+      // $(window).resize(function() {
+      //   nsZoomZoom();
+      // });
+      // function nsZoomZoom() {
+      //     let htmlWidth = $(window).innerWidth();
+      //     let bodyWidth = 1280;
+      //     let scale;
+      //     if (htmlWidth < bodyWidth)
+      //         scale = 1
+      //     else {
+      //         scale = htmlWidth / bodyWidth;
+      //     }
+      //     if(htmlWidth>1024){
+      //         $(".wrapper").css('-ms-transform', 'scale(' + scale + ')');
+      //         $(".wrapper").css('transform', 'scale(' + scale + ')')
+      //         $(".wrapper").css('transform-origin', 'center top');
+      //     }
+      //     else{
+      //         $(".wrapper").css('transform', 'none');
+      //     }
+      // }
+      // setTimeout(() => {
+      //   nsZoomZoom();
+      // }, 100);
     </script>
+    
   </body>
 </html>
