--- a/client/public/index.html
+++ b/client/public/index.html
@@ -41,12 +41,9 @@
   </head>
   <body onload="move()">
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div className="preloader" id="preloader">
+    <div className="preloader" id="preloader" style="display: none;">
       <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
           viewBox="0 0 95 114.3" style="enable-background:new 0 0 95 114.3;" xml:space="preserve">
-          <style type="text/css">
-            .st0{fill:none;stroke:rgb(241, 245, 5);stroke-width:2;stroke-miterlimit:10;}
-          </style>
           <g>
             <path class="st0" id="path1" d="M53.4,107.4c0,2.5-2.4,4.6-5.4,4.6l0,0c-3,0-5.4-2-5.4-4.6V49.9c0-2.5,2.4-4.6,5.4-4.6l0,0c3,0,5.4,2,5.4,4.6
               V107.4z"/>
