--- a/client/public/index.html
+++ b/client/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <!--SEO-->
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logoweb.png" />
-    <!-- <meta property="og:url" content="https://www.nghiatran.info"> -->
+    <!-- <meta property="og:url" content=""> -->
     <meta property="og:type" content="Website">
     <meta property="og:title" content="Q-HJV Portfolio">
     <meta property="og:description" content="I’m a web developer.">
@@ -22,7 +22,6 @@
     <!--bootstrap css-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" >
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.0/font/bootstrap-icons.css">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.7.1/gsap.min.js"></script>
     <!--css-->
     <link rel="stylesheet" href="../src/asset/css/style.css">
     <!--------------------- ICONS --------------------->
