--- a/client/public/index.html
+++ b/client/public/index.html
@@ -10,7 +10,8 @@
     <!-- <meta property="og:url" content=""> -->
     <meta property="og:type" content="Website">
     <meta property="og:title" content="Q-HJV Portfolio">
-    <meta property="og:description" content="I’m a web developer.">
+    <meta name="description" content="I’m a web developer and I have a big dream.">
+    <meta property="og:description" content="I’m a web developer and I have a big dream">
     <meta property="og:image" content="%PUBLIC_URL%/logoweb.png">
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -38,7 +39,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Q-HJV portfolio</title>
+    <title>Q-HJV Portfolio</title>
   </head>
   <body data-barba="container">
     <noscript>You need to enable JavaScript to run this app.</noscript>
