--- a/client/public/index.html
+++ b/client/public/index.html
@@ -9,7 +9,7 @@
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logoweb.png" />
     <!-- <meta property="og:url" content=""> -->
     <meta property="og:type" content="Website">
-    <meta property="og:title" content="Q-HJV Portfolio">
+    <meta property="og:title" content="QHJV Portfolio">
     <meta name="description" content="I’m a web developer and I have a big dream.">
     <meta property="og:description" content="I’m a web developer and I have a big dream">
     <meta property="og:image" content="%PUBLIC_URL%/logoweb.png">
@@ -39,7 +39,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Q-HJV Portfolio</title>
+    <title>QHJV Portfolio</title>
   </head>
   <body data-barba="container">
     <noscript>You need to enable JavaScript to run this app.</noscript>
