--- a/client/public/index.html
+++ b/client/public/index.html
@@ -49,6 +49,8 @@
     <title>QHJV Portfolio</title>
   </head>
   <body data-barba="container">
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8111227499202633"
+     crossorigin="anonymous"></script>
     <!-- Google Tag Manager (noscript) -->
     <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-MM2ZLQ9"
     height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
