--- a/client/public/index.html
+++ b/client/public/index.html
@@ -50,6 +50,18 @@
   </head>
   <body data-barba="container">
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8111227499202633"
+         crossorigin="anonymous"></script>
+    <!-- qcgg -->
+    <ins class="adsbygoogle"
+         style="display:block"
+         data-ad-client="ca-pub-8111227499202633"
+         data-ad-slot="4264512632"
+         data-ad-format="auto"
+         data-full-width-responsive="true"></ins>
+    <script>
+         (adsbygoogle = window.adsbygoogle || []).push({});
+    </script>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8111227499202633"
      crossorigin="anonymous"></script>
     <!-- Google Tag Manager (noscript) -->
     <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-MM2ZLQ9"
